--- a/Views/Ship/Details.cshtml
+++ b/Views/Ship/Details.cshtml
@@ -137,7 +137,7 @@
                                 <div class="col-md-6">
                                 </div>
                                 <div class="col-md-6">
-                                    <button type="button" class="btn btn-outline-danger btn-block" id="shipDeleteButton">
+                                    <button type="button" class="btn btn-outline-danger btn-block" data-toggle="modal" data-target="#modal-default">
                                         <i class="fas fa-trash"></i> Delete Ship
                                     </button>
                                 </div>
@@ -146,8 +146,52 @@
                         </div>
                     </div>
                 </div>
-
                 
+
+                <div id="toastsContainerTopRight" class="toasts-top-right fixed"></div>
+                <!-- Modal -->
+                <div class="modal fade" id="modal-default" aria-hidden="true" style="display: none;">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Delete Ship Control</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>You are about to delete the ship. Are you sure?</p>                              
+                                
+                                    <div class="card-body pb-0">
+                                        <div class="row">
+                                        <div class="col-md-2"></div>
+                                                <div class="col-md-8">
+                                                <a asp-controller="Ship" asp-action="Details" asp-route-shipId="@Model.ShipId" class="card card-outline card-primary btn-block shadow" style="padding:0; text-align:left; background-color:transparent;">
+                                                    <img alt="" style="height: 180px; width: 100%; display: block;" src="@Model.PhotoUrl" data-holder-rendered="true">
+                                                        <div class="card-body">
+                                                            <dl>
+                                                                <dt>@Model.ShipName &nbsp; <img src="~/images/flags/@($"{Model.CountryCode}.svg")" style="height: 15px;" class="elevation-2" alt="Flag"> </dt>
+                                                                <dd>Owner: @Model.ShipOwner.Name</dd>
+                                                            </dl>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            
+                                        </div>
+                                    </div>
+                                
+                            </div>
+                            <div class="modal-footer justify-content-between">
+                                <button type="button" id="closeButton"  class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" id="shipDeleteButton" class="btn btn-outline-danger">DELETE</button>
+                            </div>
+                        </div>
+                        <!-- /.modal-content -->
+                    </div>
+                    <!-- /.modal-dialog -->
+                </div>
+
+                <!--toaster-->
 
                 
 
@@ -398,6 +442,35 @@
 
 
             });
+
+            $('#shipDeleteButton').click(function () {
+                
+
+                var shipData = {
+                    ShipId: parseInt('@Model.ShipId'),
+                    ShipOwnerId: parseInt('@Model.ShipOwnerId')
+                };
+
+
+                $.ajax({
+                    url: '@Url.Action("DeleteShip", "Ship")',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(shipData),
+                    success: function (response) {
+                        document.getElementById('closeButton').click();
+                        window.location.href = response.redirectUrl;
+                    },
+                    error: function (error) {
+                        alert('Error deleting data!');
+                    }
+                });
+
+
+            });
+
+
+
         });
 
 
@@ -444,4 +517,5 @@
             }
         });
     </script>
+
 }
